The butons now align to the base of the page. set the flex direction of body to column. added flex: auto to the footer. This has now aligned the footer buttons to the base of the page. Current issue is while the buttons are on the base of the page the grey background is filling the remaining space.

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
+  display:flex;
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  flex-direction: column;
 }
 
 img {
@@ -57,6 +59,7 @@ ul {
   justify-content: space-between;
   background-color: #eeeeee;
   align-items: flex-end;
+  flex:auto;
 }
 
 
